# quote-board-discord-bot

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  example_bot.py  pyproject.toml  requirements.txt  setup.cfg  style.py
.github/workflows/: pr.yaml  pr_title.yml
quote_bot/: database.py  main.py  parser.py
quote_bot/discord_components/: DiscordButtons.py  client.py
quote_bot/discord_components/app_commands/: add_quote.py  add_quotes.py  get_board.py  reset_board.py  set_board.py
quote_bot/models/: __init__.py  create_tables.py  exchange.py  guild.py  quote.py  speaker.py  statement.py
scripts/: start.py  style.py
tests/: parser.py
